image path update

--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@
                 </div>
                 <div class="order-1 md:order-2 col-span-1 text-center">
                     <img
-                        src="Gowtham-offl-1x1.png"
+                        src="Assets/Portfolio_Gowtham.jpg"
                         alt="Gowtham PN profile photo"
                         class="w-40 h-40 object-cover rounded-full border-4 border-white/25 mx-auto mb-6"
                         loading="lazy"
